import {
  DepartmentOfLaborPolicy,
  Good,
  Item,
  ProductionBuilding,
} from '../game/enums';
import { defaultWorld } from './default-world';
import { WorldStore1800 } from './world-store-1800';
import { World1800View } from './world-views';
import { featureWorld, round, viewOf } from './test-worlds';

// Characterization tests: the snapshots pin the current behavior (bugs
// included) of the game math; the hand-derived tests below them check rules
// that are well understood independently of the implementation.

const lineTable = (world: World1800View) =>
  world.islands.flatMap((island) =>
    island.productionLines.map((pl) => ({
      island: island.name,
      building: pl.building,
      good: pl.good,
      numBuildings: pl.numBuildings,
      efficiency: round(pl.efficiency),
      constituents: pl.efficiencyConstituents.map(
        (c) => `${c.description}: ${round(c.value)}`,
      ),
      processTimeSeconds: round(pl.buildingProcessTimeSeconds),
      producedPerMin: round(pl.goodsProducedPerMinute),
      producedPerMinWithExtras: round(pl.goodsProducedPerMinuteWithExtras),
      consumedPerMin: round(pl.goodsConsumedPerMinute),
      extraGoods: pl.extraGoods.map(
        (eg) =>
          `${eg.good} <- ${eg.source}: ${round(eg.producedPerMinute)}/min`,
      ),
    })),
  );

const islandTable = (world: World1800View) =>
  world.islands.map((island) => ({
    island: island.name,
    producedGoods: island.producedGoods,
    dolPolicy: island.dolPolicy,
    hasDol: island.productionLines.map((pl) => pl.islandHasDepartmentOfLabor),
    hacienda: island.productionLines.map(
      (pl) => pl.inRangeOfHaciendaFertiliserWorks,
    ),
  }));

describe('default world', () => {
  const world = () => viewOf(defaultWorld);

  it('per-line numbers', () => {
    expect(lineTable(world())).toMatchSnapshot();
  });

  it('per-island numbers', () => {
    expect(islandTable(world())).toMatchSnapshot();
  });

  it('makes the base amount per building where nothing is boosted', () => {
    // Plantation Island's Cotton Mill has no items: 30s per Cotton Fabric = 2/min.
    const mill = world()
      .islands.find((i) => i.name === 'Plantation Island')!
      .productionLines.find(
        (pl) => pl.building === ProductionBuilding.CottonMill,
      )!;
    expect(mill.efficiency).toBe(1);
    expect(mill.goodsProducedPerMinute).toBeCloseTo(2);
  });

  it('a specialist adds its productivity to the Bakery', () => {
    // Fine Cake Decorator is +30%; a Bakery makes 1 Bread/min (60s) at 100%.
    const bakery = world()
      .islands.find((i) => i.name === 'Crown Falls')!
      .productionLines.find((pl) => pl.building === ProductionBuilding.Bakery)!;
    expect(bakery.efficiency).toBeCloseTo(1.3);
    expect(bakery.goodsProducedPerMinute).toBeCloseTo(4 * 1.3); // 4 Bakeries
  });

  it('adding a Bakery adds 1.3 Bread per minute with that specialist', () => {
    const store = WorldStore1800.fromWorld(structuredClone(defaultWorld));
    const view = new World1800View(store);
    const bakery = () =>
      view.islands
        .find((i) => i.name === 'Crown Falls')!
        .productionLines.find(
          (pl) => pl.building === ProductionBuilding.Bakery,
        )!;
    expect(bakery().goodsProducedPerMinute).toBeCloseTo(5.2);
    store.updateProductionLine(bakery().id, { numBuildings: 5 });
    expect(bakery().goodsProducedPerMinute).toBeCloseTo(6.5);
  });

  it("the Bakery's specialist also makes Chocolate, 1 for every 5 Bread", () => {
    const bakery = world()
      .islands.find((i) => i.name === 'Crown Falls')!
      .productionLines.find((pl) => pl.building === ProductionBuilding.Bakery)!;
    const chocolate = bakery.extraGoods.find(
      (eg) => eg.good === Good.Chocolate,
    )!;
    expect(chocolate.producedPerMinute).toBeCloseTo(
      bakery.goodsProducedPerMinute / 5,
    );
  });
});

describe('feature world', () => {
  const world = () => viewOf(featureWorld());

  it('per-line numbers', () => {
    expect(lineTable(world())).toMatchSnapshot();
  });

  it('per-island numbers', () => {
    expect(islandTable(world())).toMatchSnapshot();
  });
});

describe('hand-derived rules', () => {
  const line = (island: string, id: number) =>
    viewOf(featureWorld())
      .islands.find((i) => i.name === island)!
      .productionLines.find((pl) => pl.id === id)!;

  it('electricity adds 100%, the trade union bonus applies with a DOL in range', () => {
    // Steelworks: base 1 + electricity 1 + trade union bonus 0.3.
    expect(line('Old Isle', 11).efficiency).toBeCloseTo(2.3);
  });

  it('trade union bonus needs the building to be in range of the DOL', () => {
    const w = featureWorld();
    w.islands[0].productionLines[0].inRangeOfLocalDepartment = false;
    const pl = viewOf(w).islands[0].productionLines[0];
    expect(pl.efficiency).toBeCloseTo(2);
  });

  it('Galvanic Grants adds 50% on top of electricity when in range', () => {
    expect(line('Galvanic Isle', 31).efficiency).toBeCloseTo(2.5);
  });

  it('tractor barn, fertiliser and an item stack additively', () => {
    // 1 + tractor barn 2 + fertiliser 1 + trade union 0.3 + Alexander Hancock 0.8.
    expect(line('Old Isle', 13).efficiency).toBeCloseTo(5.1);
  });

  it('Silo gives +100% efficiency', () => {
    expect(line('Old Isle', 12).efficiency).toBeCloseTo(2);
  });

  it('cultural sets add their productivity effect without a trade union', () => {
    expect(line('Old Isle', 15).efficiency).toBeCloseTo(1.05);
  });

  it('Skilled Labor Act adds 1 extra good per 3 for improved buildings', () => {
    const pl = line('Old Isle', 11);
    const extra = pl.extraGoods.find(
      (eg) => eg.source === DepartmentOfLaborPolicy.SkilledLaborAct,
    )!;
    expect(extra.good).toBe(Good.SteelBeams);
    expect(extra.rate).toBeCloseTo(1 / 3);
  });

  it('Land Reform Act adds 1 extra good per 2 for improved buildings', () => {
    const pl = line('Land Reform Isle', 21);
    const extra = pl.extraGoods.find(
      (eg) => eg.source === DepartmentOfLaborPolicy.LandReformAct,
    )!;
    expect(extra.rate).toBeCloseTo(1 / 2);
    // 5 grain farms, 1 / 1 efficiency (base 1 + 0.3 trade union): 5 * 60 / (process / 1.3)
    expect(pl.goodsProducedPerMinuteWithExtras).toBeCloseTo(
      pl.goodsProducedPerMinute * 1.5,
    );
  });

  it('Hacienda Fertiliser Works only counts in the New World', () => {
    expect(line('New Isle', 42).inRangeOfHaciendaFertiliserWorks).toBe(true);
    const w = featureWorld();
    w.islands[0].productionLines.push({
      building: ProductionBuilding.CottonPlantation,
      good: Good.Cotton,
      numBuildings: 1,
      inRangeOfHaciendaFertiliserWorks: true,
    });
    const old = viewOf(w).islands[0].productionLines.at(-1)!;
    expect(old.inRangeOfHaciendaFertiliserWorks).toBe(false);
  });

  it('consumption equals production (inputs scale one-to-one)', () => {
    const pl = line('Old Isle', 11);
    expect(pl.goodsConsumedPerMinute).toBe(pl.goodsProducedPerMinute);
  });

  it('island producedGoods include item extra goods', () => {
    const goods = viewOf(featureWorld()).islands[0].producedGoods;
    expect(goods).toContain(Good.Potatoes);
    expect(goods).toContain(Good.Chocolate);
  });
});

describe('goods per minute constituents', () => {
  const lines = () =>
    viewOf(featureWorld()).islands.flatMap((i) => i.productionLines);

  it('sum to goodsProducedPerMinuteWithExtras for every line', () => {
    for (const pl of [
      ...lines(),
      ...viewOf(defaultWorld).islands.flatMap((i) => i.productionLines),
    ]) {
      const sum = pl.goodsProducedPerMinuteConstituents.reduce(
        (t, c) => t + c.value,
        0,
      );
      expect(sum).toBe(pl.goodsProducedPerMinuteWithExtras);
    }
  });

  it('is just the base production when there are no extra goods of the same good', () => {
    const flourMill = lines().find((pl) => pl.id === 16)!;
    expect(flourMill.goodsProducedPerMinuteConstituents).toEqual([
      expect.objectContaining({
        value: flourMill.goodsProducedPerMinute,
        description: 'Base Production',
      }),
    ]);
  });

  it('lists each same-good extra with its source and share of the base output', () => {
    // Steelworks with Skilled Labor Act: 1 extra Steel Beams per 3 produced.
    const steelworks = lines().find((pl) => pl.id === 11)!;
    const [base, extra] = steelworks.goodsProducedPerMinuteConstituents;
    expect(base.description).toBe('Base Production');
    expect(extra.description).toBe(DepartmentOfLaborPolicy.SkilledLaborAct);
    expect(extra.value).toBeCloseTo(base.value / 3);
    expect(extra.iconUrl).toBeTruthy();
    // 2 buildings, 45s base process time, 230% efficiency; a third of the base.
    expect(base.detail).toEqual([
      { value: 2 },
      '×',
      { value: 60, unit: 's' },
      '÷',
      '(',
      { value: 45, unit: 's' },
      '÷',
      { value: expect.closeTo(2.3), isPercent: true },
      ')',
    ]);
    expect(extra.detail).toEqual([
      { value: 1 },
      '/',
      { value: 3 },
      '×',
      { value: base.value, unit: '/m' },
    ]);
  });

  it('leaves out extras of other goods', () => {
    // The Bakery's Fine Cake Decorator makes Chocolate, which is not Bread.
    const bakery = lines().find((pl) => pl.id === 14)!;
    expect(bakery.goodsProducedPerMinuteConstituents.length).toBe(1);
  });
});

describe('inputGoodSources', () => {
  it('exposes each input with the specialist that substituted it', () => {
    const world = viewOf({
      islands: [
        {
          id: 1,
          name: 'Isle',
          productionLines: [
            {
              id: 1,
              building: ProductionBuilding.Bakery,
              good: Good.Bread,
              numBuildings: 1,
              hasTradeUnion: true,
              items: [Item.Baker],
            },
            {
              id: 2,
              building: ProductionBuilding.Bakery,
              good: Good.Bread,
              numBuildings: 1,
            },
          ],
        },
      ],
      tradeRoutes: [],
    });
    const [withBaker, plain] = world.islands[0].productionLines;
    expect(withBaker.inputGoodSources).toEqual([
      { good: Good.Grain, replaces: Good.Flour, item: Item.Baker },
    ]);
    expect(plain.inputGoodSources).toEqual([{ good: Good.Flour }]);
  });
});
